# inspect_evals_dashboard_schema

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/inspect_evals_dashboard_schema/: __init__.py  schema.py
